# hacktheplanet

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  COPYING.txt  HackThePlanet  Jamroot  README.md  build.sh  clean.sh  premake4.lua  spm.json
docs/: Declaration_of_the_Independence_of_Cyperspace.txt
game/: App.cpp  hacktheplanet.cpp
include/: config.hpp  lua.hpp
include/htp/: App.hpp  config.hpp  input.hpp  kernel.hpp  lua.hpp  lua_hook.hpp  lua_io.hpp  render.hpp
include/htp/input/: getinput.hpp
include/htp/kernel/: filesystem.hpp
include/htp/lua/: dofunction.hpp  errorhandling.hpp  hook.hpp  state.hpp  tablecontrol.hpp
include/htp/lua/functions/: include.hpp
include/htp/render/: App.hpp  glApp.hpp  ncApp.hpp
include/htp/util/: timer.hpp
include/lua/: hook.hpp
lib/: extras.sh
specs/: Map Archive Specification.txt
src/: .hacktheplanet.cpp.swp  hacktheplanet.cpp  lua_hook.cpp  lua_io.cpp
src/htp/: App.cpp  CMakeLists.txt  Jamfile  hacktheplanet.cpp
src/input/: CMakeLists.txt  getinput.cpp
src/kernel/: CMakeLists.txt  Jamfile  filesystem.cpp
src/lua/: CMakeLists.txt  dofunction.cpp  dofunction.hpp  errorhandling.cpp  hook.cpp  hook.hpp  state.cpp  tablecontrol.cpp
src/lua/functions/: include.cpp
src/render/: App.cpp  CMakeLists.txt  Jamfile  glApp.cpp  ncApp.cpp
