cmake_minimum_required( VERSION 2.8 )
project( HackThePlanet )
	file( GLOB_RECURSE HackThePlanet_SRCS *.cpp )
	find_package( Boost 1.47.0 COMPONENTS chrono )
	if( NOT Boost_FOUND )
		set( CMAKE_CXX_FLAGS "-std=c++0x" )
	else( Boost_FOUND )
		add_definitions( -DUSE_BOOST_CHRONO )
	endif( NOT Boost_FOUND )
	find_package( Boost 1.47.0 COMPONENTS system random filesystem iostreams date_time chrono )
	if( NOT Boost_FOUND )
		message( FATAL_ERROR "Could not find libboost 1.47.0!" )
	endif( NOT Boost_FOUND )
	set( CURSES_NEED_NCURSES true )
	find_package(Curses)
	if( NOT CURSES_FOUND )
		message( FATAL_ERROR "Could not find ncurses-like library!" )
	endif( NOT CURSES_FOUND )
	find_package(Lua51)
	if(NOT LUA51_FOUND )
		message( FATAL_ERROR "Could not find lua!" )
	endif( NOT LUA51_FOUND )
	include_directories( "${Boost_INCLUDE_DIR}" "${CURSES_INCLUDE_DIR}" "${LUA_INCLUDE_DIR}" "${LIBRARY_OUTPUT_PATH}/gwen/trunk/gwen/include" )
	link_directories( "${LIBRARY_OUTPUT_PATH}" )
	add_executable( HackThePlanet ${HackThePlanet_SRCS} )
	target_link_libraries( HackThePlanet rt dl ${Boost_LIBRARIES} ${CURSES_LIBRARIES} ${LUA_LIBRARIES} htp_input htp_lua htp_render )
