cmake_minimum_required( VERSION 2.8 )
project( HackThePlanet )
	file( GLOB_RECURSE HackThePlanet_SRCS *.cpp )
	message( STATUS "Looking for Boost... " )
	find_package( Boost COMPONENTS system random filesystem iostreams date_time)
	if( NOT Boost_FOUND )
		message( FATAL_ERROR "Could not find Boost! ")
	endif( NOT Boost_FOUND )
	set( CURSES_NEED_NCURSES true )
	find_package(Curses)
	if( NOT CURSES_FOUND )
		message( FATAL_ERROR "Could not find ncurses-like library!" )
	endif( NOT CURSES_FOUND )
	find_package(Lua51)
	if(NOT LUA51_FOUND )
		message( FATAL_ERROR "Could not find lua!" )
	endif( NOT LUA51_FOUND )
	message( STATUS "Enabling C++0x support..." )
	set( CMAKE_CXX_FLAGS "-std=c++0x" )
	include_directories( "${Boost_INCLUDE_DIR}" "${CURSES_INCLUDE_DIR}" "${LUA_INCLUDE_DIR}" "${LIBRARY_OUTPUT_PATH}/gwen/trunk/gwen/include" )
	link_directories( "${LIBRARY_OUTPUT_PATH}" )
	add_executable( HackThePlanet ${HackThePlanet_SRCS} )
	target_link_libraries( HackThePlanet rt dl ${Boost_LIBRARIES}
	${CURSES_LIBRARIES} ${LUA_LIBRARIES} htp_input htp_render script )

add_dependencies( HackThePlanet script )
